# REPENTOGON

./: .gitattributes  .gitignore  .gitmodules  404.html  Ambush.html  AnimationData.html  AnimationFrame.html  AnimationLayer.html  AnimationState.html  Backdrop.html  BossPool.html  BossPoolManager.html  CMakeLists.txt  CNAME  Camera.html  Capsule.html  CcpContainer_RoomConfigSet.html  ChallengeParam.html  Color.html  ColorModifier.html  ColorParams.html  Console.html  CostumeSpriteDesc.html  DailyChallenge.html  Debug.html  DebugRenderer.html  EntitiesSaveState.html  EntitiesSaveStateVector.html  Entity.html  EntityBomb.html  EntityConfig.html  EntityConfigBaby.html  EntityConfigEntity.html  EntityConfigPlayer.html  EntityDelirium.html  EntityEffect.html  EntityFamiliar.html  EntityKnife.html  EntityLaser.html  EntityNPC.html  (+93 more)
Lua54Upgrader/: dllmain.cpp
blog/: index.html
changes/: Debugging.html  General.html  UI.html
delirium/: ASMDelirium.cpp  Delirium.cpp  Delirium.h  LuaDelirium.cpp
docs/: index.html  mkdocs.yml
documentation/: index.html  mkdocs.yml  requirements.txt
dsound/: dllmain.cpp  version.cpp  version.h
enums/: Achievement.html  AddHealthType.html  AnimRenderFlags.html  AnnouncerVoiceMode.html  AutocompleteType.html  BagOfCraftingPickup.html  BlendFactor.html  BlendType.html  BombCostumeLayer.html  BossType.html  ButtonActionBitwise.html  CameraStyle.html  CompletionType.html  ConceptionFamiliarFlag.html  ConsoleFont.html  DebugFlag.html  DeliriumCallbacks.html  DialogButtons.html  DialogIcons.html  DialogReturn.html  Dimension.html  DipSubType.html  DwmWindowAttribute.html  Ending.html  EntityPoopVariant.html  EntityTag.html  EventCounter.html  ExtraHudStyle.html  FadeoutTarget.html  FollowerPriority.html  GLSLType.html  GetCollectibleFlag.html  Giantbook.html  GibFlag.html  GridPoopVariant.html  HealthType.html  ImGuiCallback.html  ImGuiColor.html  ImGuiData.html  ImGuiElement.html  (+37 more)
examples/: Beams.html  Capsules.html  ColorModifiers.html  DealChance.html  ImGuiMenu.html  WeightedOutcomes.html  capsules.html
ghidra_scripts/: makesig.py
include/: HookSystem.h  IsaacRepentance.h  libzhl.h
injector/: injector.c  injector.cpp  window.cpp  window.h
launcher/: ConsoleWindow.cpp  Logger.cpp  Logger.h  Updater.cpp  Updater.h  dllmain.cpp  launcher.cpp  launcher.vcxproj  launcher.vcxproj.filters  utils.cpp  utils.h  version.cpp  version.h
launcher_core/: Logger.cpp  utils.cpp
lib/: libzhl.lib
libs/: lua-5.3.3.tar  luasocket_patch.diff
libzhl/: ASMDefinition.cpp  ASMDefinition.h  ASMPatcher.cpp  ASMPatcher.hpp  ByteBuffer.cpp  ByteBuffer.h  CrashHandler.cpp  CrashHandler.h  Exception.cpp  Exception.h  HookSystem.cpp  HookSystem_private.h  IsaacRepentance.cpp  IsaacRepentance_static.cpp  LICENSE  Log.cpp  Log.h  LuaCore.cpp  LuaCore.h  Monitor.h  SigScan.cpp  SigScan.h  Signature.cpp  Signature.h  Version.cpp  detours.h  dllmain.cpp  ffi.cpp  ffi.h  filesystem.cpp  hde.cpp  hde.h  lib  libzhl.vcxproj  libzhl.vcxproj.filters  mologie_detours.h  x86_defines.h
libzhlgen/: CodeEmitter.cpp  CodeEmitter.h  IsaacRepentanceStripped.h  ParserCore.cpp  ParserCore.h  ParserDefinitions.cpp  ParserDefinitions.h  TypeMap.cpp  TypeMap.h  TypeValidator.cpp  TypeValidator.h  ZHLLexer.cpp  ZHLLexer.g4  ZHLLexer.h  ZHLLexer.interp  ZHLLexer.tokens  ZHLParser.cpp  ZHLParser.g4  ZHLParser.h  ZHLParser.interp  ZHLParser.tokens  ZHLParserBaseListener.cpp  ZHLParserBaseListener.h  ZHLParserBaseVisitor.cpp  ZHLParserBaseVisitor.h  ZHLParserListener.cpp  ZHLParserListener.h  ZHLParserVisitor.cpp  ZHLParserVisitor.h  cparser.lua  parsefuncs.lua  parser.cpp
loader/: ConsoleWindow.cpp  ConsoleWindow.h  Version.cpp  loader.cpp
logger/: logger.cpp
luajit-test/: HookTest.cpp  LuaJITState.cpp  LuaJITState.h  RunLJCommand.cpp  dllmain.cpp  ffi.h
menus/: BestiaryMenu.html  ChallengeMenu.html  CharacterMenu.html  CollectionMenu.html  ControllerSelectMenu.html  CustomChallengeMenu.html  CutscenesMenu.html  DailyChallengeMenu.html  KeyConfigMenu.html  MainMenu.html  MenuManager.html  ModsMenu.html  OptionsMenu.html  PauseMenu.html  SaveMenu.html  SpecialSeedsMenu.html  StatsMenu.html  TitleMenu.html
modtest/: ASMAmbush.cpp  ASMAmbush.h  ASMCore.h  ASMInputAction.cpp  ASMInputAction.h  ASMLogMessage.h  ASMMegaSatan.cpp  ASMMegaSatan.h  ASMPatches.h  CompletionTracker.cpp  CompletionTracker.h  ConsoleAutocomplete.cpp  ConsoleAutocomplete.h  ConsoleHooks.cpp  ConsoleMega.cpp  ConsoleMega.h  CustomCallbacks.cpp  CustomDevilPlanetariumChance.cpp  CustomImGui.h  HelpMenu.h  HookTest.cpp  ImGui.cpp  ImguiLuaBindings.h  LogViewer.h  LuaASM.cpp  LuaAmbush.cpp  LuaAnimationState.cpp  LuaBackdrop.cpp  LuaCamera.cpp  LuaCapsule.cpp  LuaColor.cpp  LuaConsole.cpp  LuaCore.cpp  LuaCore.h  LuaDebugRenderer.cpp  LuaEntity.cpp  LuaEntityFamiliar.cpp  LuaEntityLaser.cpp  LuaEntityNPC.cpp  LuaEntityPickup.cpp  (+43 more)
offline_scanner/: offline_scanner.cpp
renderer/: Beam.html  BlendMode.html  CustomRendering.html  DestinationQuad.html  GLSLValue.html  Image.html  Pipeline.html  Point.html  RenderSet.html  Renderer.html  Shader.html  Shape.html  SourceQuad.html  Transformer.html  Vertex.html  VertexBuffer.html  VertexDescriptor.html
repentogon/: ASMPatches.cpp  ASMPatches.h  AchievementsStuff.cpp  AchievementsStuff.h  CompletionTracker.cpp  CompletionTracker.h  ConsoleHooks.cpp  ConsoleMega.h  CustomCallbacks.cpp  CustomDevilPlanetariumChance.cpp  HookTest.cpp  ImGui.cpp  LauncherInterface.h  LogUtility.h  LuaAmbush.cpp  LuaAnimationData.cpp  LuaAnimationLayer.cpp  LuaAnimationState.cpp  LuaBlendMode.cpp  LuaCamera.cpp  LuaChallengeParam.cpp  LuaCharacterMenu.cpp  LuaColorCorrection.cpp  LuaColorModifier.cpp  LuaConsole.cpp  LuaDailyChallenge.cpp  LuaDebug.cpp  LuaEntity.cpp  LuaEntityFamiliar.cpp  LuaEntityNPC.cpp  LuaEntityNPC.h  LuaEntityPickup.cpp  LuaEntityPlayer.cpp  LuaFXParams.cpp  LuaGame.cpp  LuaHUD.cpp  LuaHistory.cpp  LuaImGui.cpp  LuaInit.cpp  LuaInit.h  (+46 more)
scripts/: release.sh
search/: search_index.json
snippets/: EntityClassDiagram_NewFunkyMode.html  PLACEHOLDER.html
(+1275 files in other folders)
